k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    name: myingress
spec:
  rules:
  - host: staging.lantan.property
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port:
              number: 80

  tls:
    - hosts:
        - staging.lantan.property
      secretName: tls-2048-latan
